--- a/app/style/sections.css
+++ b/app/style/sections.css
@@ -4,6 +4,8 @@
 
 .section_container {
   display: flex;
+  padding-bottom: 15px;
+  background-color: #0d1821;
   justify-content: space-around;
   -webkit-box-shadow: 0px 26px 12px -12px rgba(237, 237, 237, 1);
   -moz-box-shadow: 0px 26px 12px -12px rgba(237, 237, 237, 1);
@@ -15,12 +17,16 @@
   height: 50px;
   color: #ccc;
   border: none;
-  background-color: #262626;
+  background-color: #0d1821;
   cursor: pointer;
 }
 
 .sections_button:hover {
   color: #34adf8;
+}
+
+.section_container button {
+  margin-bottom: 10px;
 }
 
 .sections__buttonText {
@@ -37,4 +43,56 @@
 
 .sections__currentSection {
   color: #34adf8;
+}
+
+.loaderContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: #34adf8;
+}
+
+.section__loadingBar {
+  display: block;
+  width: 100%;
+  position: relative;
+  background-color: #0d1821;
+  border-right: 2px solid #0d1821;
+}
+.section__loader {
+  display: block;
+  height: 19px;
+  background-color: green;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.section__loadingBar::before {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
+
+.section__loadingBar:nth-child(1) .section__loader {
+  width: 100%;
+  text-align: center;
+}
+
+.section__loadingBar:nth-child(2) .section__loader {
+  width: 100%;
+  text-align: center;
+}
+
+.section__loadingBar:nth-child(3) .section__loader {
+  width: 100%;
+  text-align: center;
+}
+
+.section__loadingBar--configuration {
+  width: 100%;
+  background-color: #0d1821;
 }
