--- a/app/style/sections.css
+++ b/app/style/sections.css
@@ -16,6 +16,7 @@
   width: 100%;
   height: 50px;
   color: #ccc;
+  font-family: "Pixelify Sans", sans-serif;
   border: none;
   background-color: #0d1821;
   cursor: pointer;
