--- a/app/style/sections.css
+++ b/app/style/sections.css
@@ -175,9 +175,7 @@
   border: none;
   outline: none;
   font-family: "Pixelify Sans", sans-serif;
-  text-transform: capitalize;
   font-size: 15px;
-  letter-spacing: 0.3rem;
 }
 
 .lightohouse__about {
@@ -226,4 +224,53 @@
   flex-direction: row;
   width: 100%;
   gap: 50px;
+}
+
+/* settings */
+
+.settingsList {
+  list-style: none;
+  width: 100%;
+}
+
+.settingsListItem {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 30px;
+  align-items: center;
+}
+
+.settingsTitle {
+  font-size: 19px;
+  width: 120px;
+}
+
+.textarea {
+  border-radius: 12px;
+  width: 70%;
+  border: none;
+  outline: none;
+  padding: 5px;
+  font-family: "Courier New", Courier, monospace;
+  resize: none;
+  background-color: hsl(207, 43%, 19%);
+  color: #fff;
+}
+
+.autorizationInputContainer {
+  display: none;
+  gap: 10px;
+  margin-left: 30px;
+  width: 75%;
+}
+
+.button--auth {
+  width: 20%;
+}
+
+.fileName__input--auth {
+  margin: 0;
+  width: 40%;
+  padding: 6px;
+  font-family: "Courier New", Courier, monospace;
 }
