--- a/app/style/main.css
+++ b/app/style/main.css
@@ -12,6 +12,13 @@ html {
 
 body {
   margin: 0;
-  background-color: #11202c;
   height: 100vh;
+  background-color: #11202c;
+}
+
+header {
+  z-index: 99;
+  position: sticky;
+  top:0;
+  left:0;
 }
