--- a/app/style/sections.css
+++ b/app/style/sections.css
@@ -1,18 +1,12 @@
-.sections {
-  width: 100%;
-}
-
-.section_container {
+.navigationBtnsWrapper {
   display: flex;
   gap: 5px;
   background-color: #0d1821;
   justify-content: space-around;
-  margin-bottom: 15px;
 }
 
-.section__containerBtn {
+.navigationBtnContainer {
   display: flex;
-  width: 100%;
   flex-direction: column;
 }
 
@@ -54,7 +48,7 @@
   color: #34adf8;
 }
 
-.sections__buttonText {
+.navigation__btnText {
   display: block;
   margin: 6px;
   font-size: 15px;
@@ -84,6 +78,7 @@
   background-color: #0d1821;
   border-right: 2px solid #0d1821;
 }
+
 .section__loader {
   display: block;
   height: 19px;
@@ -122,13 +117,13 @@
   background-color: #0d1821;
 }
 
-.lighthouse {
+.section {
   display: flex;
   gap: 20px;
   height: calc(100vh - 134px);
 }
 
-.lighthouse__form {
+.formContainer {
   flex-direction: column;
   width: 70%;
   display: flex;
@@ -138,7 +133,11 @@
   height: 100%;
 }
 
-.lighthouse__inputs {
+.formContainer--settings {
+  width: 100%;
+}
+
+.inputsContainer {
   width: 80%;
 }
 
@@ -178,19 +177,11 @@
   font-size: 15px;
 }
 
-.lightohouse__about {
+.aboutContainer {
   display: flex;
-  width: 50%;
-  margin: 20px;
-}
-
-.lighthouse__aboutContainer {
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin: 15px auto;
   align-items: center;
+  width: 40%;
+  margin: 0 20px;
 }
 
 /* progress bars */
