--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
-  font-family: "Pixelify Sans", sans-serif;
+  font-family: "Lato", sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   color: #fff;
 }
 
