--- a/app/style/sections.css
+++ b/app/style/sections.css
@@ -173,7 +173,7 @@
   margin-bottom: 50px;
   border: none;
   outline: none;
-  font-family: "Pixelify Sans", sans-serif;
+
   font-size: 15px;
 }
 
@@ -181,10 +181,12 @@
   display: flex;
   align-items: center;
   width: 40%;
-  margin: 0 20px;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin-right: 30px;
 }
 
-/* progress bars */
 
 .lighthouse__progressBar {
   display: none;
@@ -198,7 +200,6 @@
   display: none;
 }
 
-/* axe section */
 
 .sectionContent {
   display: flex;
@@ -217,7 +218,7 @@
   gap: 50px;
 }
 
-/* settings */
+
 
 .settingsList {
   list-style: none;
@@ -263,11 +264,10 @@
   margin: 0;
   width: 40%;
   padding: 6px;
-  font-family: "Courier New", Courier, monospace;
 }
 
 .btn-active {
-  width:200px;
+  width: 200px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -285,11 +285,21 @@
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); } 
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
