--- a/app/style/navigationBar.css
+++ b/app/style/navigationBar.css
@@ -1,6 +1,7 @@
 .navigationBar {
   padding: 0;
   width: 100%;
+  height: 50px;
   display: flex;
   justify-content: flex-end;
   background-color: #0d1821;
@@ -10,7 +11,7 @@
 .navigationBar__button {
   margin: 2px;
   padding: 5px;
-  width: 30px;
+  width: 50px;
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -24,5 +25,5 @@
 }
 
 .navigationBar__icons {
-  font-size: 13px;
+  font-size: 19px;
 }
