--- a/app/style/main.css
+++ b/app/style/main.css
@@ -20,6 +20,21 @@ body {
 header {
   z-index: 99;
   position: sticky;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  line-height: 2.1;
+  font-family: sans-serif;
+}
+
+.aboutText {
+  font-family: sans-serif;
 }
