--- a/app/style/navigationBar.css
+++ b/app/style/navigationBar.css
@@ -3,7 +3,8 @@
   width: 100%;
   height: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   background-color: #0d1821;
   -webkit-app-region: drag;
 }
@@ -12,6 +13,7 @@
   margin: 2px;
   padding: 5px;
   width: 50px;
+  height: 100%;
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -26,4 +28,23 @@
 
 .navigationBar__icons {
   font-size: 19px;
+}
+
+.navigationBar__image {
+  height: 100%;
+  align-self: center;
+  padding-left: 25px;
+}
+
+.navigation__logo {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-family: sans-serif;
+  font-size: 14px;
+  color: #ccc;
+}
+
+.navigation__btns {
+  height: 100%;
 }
